<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameFragment">
    <data>
        <variable
            name="gameViewModel"
            type="com.practice.guesstheword.GameViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/word_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:letterSpacing="0.1"
            android:text="@{gameViewModel.secretWordDisplayed}"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/lives_textview"
                android:text="@string/you_have_lives_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/lives_amount_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@{gameViewModel.lives.toString()}"/>
        </LinearLayout>
        <TextView
            android:id="@+id/incorrect_guesses_textview"
            android:text="@string/incorrect_guesses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/incorrect_guesses_list_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@{gameViewModel.incorrectGuesses}"/>
        <TextView
            android:id="@+id/guess_the_letter_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/enter_english_letter"/>

        <EditText
            android:id="@+id/letter_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:inputType="textCapCharacters"
            android:textSize="32sp"
            android:ems="1"
            android:maxLength="1"
            android:gravity="center"
            android:hint="@string/asterisk"/>
        <Button
            android:id="@+id/guess_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/guess"/>
        <Button
            android:id="@+id/finish_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_the_answer"
            android:onClick="@{() -> gameViewModel.finishGame()}"/>
    </LinearLayout>
</layout>